05_jfrog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfrog-service
  namespace: test-namespace
  labels:
    app: jfrog-service
spec:
  selector:
    app: jfrog
  ports:
  - name: http
    port: 8081
    targetPort: 8081
