05_jfrog/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jfrog-ingress
  namespace: test-namespace
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: jfrog.cathaylife.com.tw
  - http:
      paths:
      - path: /
        backend:
          serviceName: jfrog-service
          servicePort: 8081
